--- a/vue2x/yyq/src/assets/css/reset.css
+++ b/vue2x/yyq/src/assets/css/reset.css
@@ -6,99 +6,210 @@ http://yuilibrary.com/license/
 */
 
 @charset "utf-8";
-
-html{
-  color:#000;
-  background:#f7f7f7;
+html {
+  color: #000;
+  background: #f7f7f7;
   font-size: 100px;
 }
 
-body{
+body {
   font-size: .24rem;
 }
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video{
-  margin:0;
-  padding:0;
- /*  font-family: "Microsoft YaHei","微软雅黑","宋体","Arial"; */
- font-family: 'Microsoft YaHei',Helvetica,Arial,sans-serif;
-  tap-highlight-color:rgba(255,0,0,0);
-  box-sizing:border-box;
-  -webkit-box-sizing:border-box;
-}
-*{
-  margin:0;
-  padding:0;
-  font-family: 'Microsoft YaHei',Helvetica,Arial,sans-serif;
-  box-sizing:border-box;
-  -webkit-box-sizing:border-box;
-}
-table{
-  border-collapse:collapse;
-  border-spacing:0;
-}
-fieldset,img{
-  border:0;
-}
-address,caption,cite,code,dfn,em,strong,th,var{
-  font-style:normal;
-  font-weight:normal;
-}
-ol,ul,li{
-  list-style:none;
-}
-caption,th{
-  text-align:left;
-}
-h1,h2,h3,h4,h5,h6{
-  font-size:100%;
-  font-weight:normal;
-}
-q:before,q:after{
-  content:'';
-}
-abbr,acronym{
-  border:0;
-  font-variant:normal;
-}
-sup{
-  vertical-align:text-top;
-}
-sub{
-  vertical-align:text-bottom;
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  /*  font-family: "Microsoft YaHei","微软雅黑","宋体","Arial"; */
+  font-family: 'Microsoft YaHei', Helvetica, Arial, sans-serif;
+  tap-highlight-color: rgba(255, 0, 0, 0);
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
-a,i,em{
+* {
+  margin: 0;
+  padding: 0;
+  font-family: 'Microsoft YaHei', Helvetica, Arial, sans-serif;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+fieldset,
+img {
+  border: 0;
+}
+
+address,
+caption,
+cite,
+code,
+dfn,
+em,
+strong,
+th,
+var {
+  font-style: normal;
+  font-weight: normal;
+}
+
+ol,
+ul,
+li {
+  list-style: none;
+}
+
+caption,
+th {
+  text-align: left;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 100%;
+  font-weight: normal;
+}
+
+q:before,
+q:after {
+  content: '';
+}
+
+abbr,
+acronym {
+  border: 0;
+  font-variant: normal;
+}
+
+sup {
+  vertical-align: text-top;
+}
+
+sub {
+  vertical-align: text-bottom;
+}
+
+a,
+i,
+em {
   font-style: normal;
   text-decoration: none;
 }
-input,textarea,select,button{
-  border:0;
+
+input,
+textarea,
+select,
+button {
+  border: 0;
   outline: none;
   background: transparent;
   box-shadow: none;
-  resize:none;
+  resize: none;
   -webkit-appearance: none;
 }
 
-
-legend{
-  color:#000;
+legend {
+  color: #000;
 }
-#yui3-css-stamp.cssreset{ display:none;}
+
+#yui3-css-stamp.cssreset {
+  display: none;
+}
+
+
 /*清除浮动*/
-.g-cl{clear: both;}
+
+.g-cl {
+  clear: both;
+}
 
 .g-clearfix:after {
   content: " ";
@@ -106,6 +217,7 @@ legend{
   clear: both;
   height: 0;
 }
+
 .g-clearfix {
   zoom: 1;
 }
@@ -118,62 +230,63 @@ legend{
   font-size: .28rem;
 }
 
-.g-fl{
+.g-fl {
   float: left;
 }
 
-.g-fr{
+.g-fr {
   float: right;
 }
 
-.g-tal{
+.g-tal {
   text-align: left;
 }
+
 .g-tac {
-    text-align: center;
+  text-align: center;
 }
 
-.g-tar{
+.g-tar {
   text-align: right;
 }
 
 .t-right {
-    text-align: right;
+  text-align: right;
 }
 
-
-.g-ellipsis{
-	white-space:nowrap;
-	overflow:hidden;
-	text-overflow:ellipsis;
+.g-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
+
 .lines-ellipsis {
-  overflow : hidden;
+  overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
 
-.g-icon{
+.g-icon {
   /*background: url("../images/icon.png") no-repeat 0 0;*/
   -webkit-background-size: 2.8rem 2.23rem;
   background-size: 2.8rem 2.23rem;
 }
 
-.g-triangle{
+.g-triangle {
   display: inline-block;
   width: .4rem;
   height: .4rem;
   position: absolute;
   top: 50%;
   right: 0;
-  transform:translateY(-50%);
-  -webkit-transform:translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
 }
 
 .g-triangle em,
-.g-triangle b{
+.g-triangle b {
   width: 0;
   height: 0;
   border-width: .2rem 0 .2rem .2rem;
@@ -184,7 +297,7 @@ legend{
   left: .2rem;
 }
 
-.g-triangle b{
+.g-triangle b {
   border-left-color: #fff;
   left: .16rem;
 }
@@ -192,6 +305,96 @@ legend{
 .fade-transition {
   transition: opacity .3s ease;
 }
-.fade-enter, .fade-leave {
+
+.fade-enter,
+.fade-leave {
   opacity: 0;
+}
+
+.mint-swipe,
+.mint-swipe-items-wrap {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+}
+
+.mint-swipe-items-wrap>div {
+  position: absolute;
+  -webkit-transform: translateX(-100%);
+  transform: translateX(-100%);
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+
+.mint-swipe-items-wrap>div.is-active {
+  display: block;
+  -webkit-transform: none;
+  transform: none;
+}
+
+.mint-swipe-indicators {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+.mint-swipe-indicator {
+  width: 8px;
+  height: 8px;
+  display: inline-block;
+  border-radius: 100%;
+  background: #000;
+  opacity: .2;
+  margin: 0 3px;
+}
+
+.mint-swipe-indicator.is-active {
+  background: #fff;
+}
+
+.mint-swipe,
+.mint-swipe-items-wrap {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+}
+
+.mint-swipe-items-wrap>div {
+  position: absolute;
+  -webkit-transform: translateX(-100%);
+  transform: translateX(-100%);
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+
+.mint-swipe-items-wrap>div.is-active {
+  display: block;
+  -webkit-transform: none;
+  transform: none;
+}
+
+.mint-swipe-indicators {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+.mint-swipe-indicator {
+  width: 8px;
+  height: 8px;
+  display: inline-block;
+  border-radius: 100%;
+  background: #000;
+  opacity: .2;
+  margin: 0 3px;
+}
+
+.mint-swipe-indicator.is-active {
+  background: #fff;
 }
