--- a/vue2x/yyq/src/assets/css/reset.css
+++ b/vue2x/yyq/src/assets/css/reset.css
@@ -398,3 +398,14 @@ legend {
 .mint-swipe-indicator.is-active {
   background: #fff;
 }
+
+.flex-space {
+  display: flex;
+  justify-content: space-between;
+}
+.flex-space li {
+  flex:  1;
+}
+.router-link-active {
+  color: orange;
+}
