--- a/home/css/reset.css
+++ b/home/css/reset.css
@@ -132,7 +132,7 @@ html,body {
   width: 104px;
   height: 104px;
   float: left;
-  background: url('../images/logo.png') no-repeat 0 0;
+  background: url('http://img.yunxingzh.com/30369645-47f2-42f3-8eb7-3b5cdc79ac7a.png') no-repeat 0 0;
 }
 .g-nav{
   width: 1200px;
