--- a/vue2x/portal/src/assets/css/index.css
+++ b/vue2x/portal/src/assets/css/index.css
@@ -257,7 +257,11 @@ legend{
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background-color: #34b6f5;
+  background: url('../images/pc_img_bg.png') no-repeat center center;
+  -webkit-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  -ms-background-size: cover;
   position: relative;
 }
 
