--- a/vue2x/login/css/index.css
+++ b/vue2x/login/css/index.css
@@ -248,7 +248,7 @@ legend{
 }
 .tip-info {
   width: 140px;
-  padding: 10px 0;
+  padding: 10px;
   position: absolute;
   top:  50%;
   left: 50%;
