login css/portal build

--- a/vue2x/login/css/index.css
+++ b/vue2x/login/css/index.css
@@ -266,7 +266,7 @@ legend{
   width: 100%;
   height: 100%;
   overflow: hidden;
-  background: #5fa9ff url('./images/pc_img_bg.png') no-repeat center center;
+  background: #5fa9ff url('../images/pc_img_bg.png') no-repeat center center;
   -webkit-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
