oss role.json setweb

--- a/vue2x/oss/src/assets/iconfont/iconfont.css
+++ b/vue2x/oss/src/assets/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot'); /* IE9*/
-  src: url('iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1484708244458'); /* IE9*/
+  src: url('iconfont.eot?t=1484708244458#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1484708244458') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1484708244458') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1484708244458#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -12,48 +12,60 @@
   font-size:16px;
   font-style:normal;
   -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
-.icon-userdeleteoutline:before { content: "\e600"; }
-.icon-liwu:before { content: "\e601"; }
-.icon-search:before { content: "\e603"; }
-.icon-del:before { content: "\e604"; }
-.icon-rili:before { content: "\e61e"; }
-.icon-yingyongliebiaohuoyueyonghuxiao:before { content: "\e617"; }
-.icon-piliangchuli:before { content: "\e635"; }
-.icon-shenhebutongguo:before { content: "\e602"; }
-.icon-shipin:before { content: "\e62d"; }
-.icon-back:before { content: "\e60f"; }
-.icon-error:before { content: "\e610"; }
-.icon-beizhu:before { content: "\e639"; }
-.icon-mima:before { content: "\e608"; }
-.icon-back1:before { content: "\e615"; }
-.icon-column-trend-chart:before { content: "\e618"; }
-.icon-892nanxing:before { content: "\e63a"; }
-.icon-shenhe:before { content: "\e63b"; }
-.icon-video:before { content: "\e621"; }
-.icon-user:before { content: "\e606"; }
-.icon-zengjia:before { content: "\e60b"; }
-.icon-liucunfenxi:before { content: "\e63c"; }
-.icon-paixu:before { content: "\e60e"; }
-.icon-nv:before { content: "\e625"; }
-.icon-pathrectangle400rectangle400copy:before { content: "\e63d"; }
-.icon-message:before { content: "\e627"; }
-.icon-edit:before { content: "\e62b"; }
-.icon-renzheng:before { content: "\e63e"; }
-.icon-chongzhi:before { content: "\e636"; }
-.icon-zhubo:before { content: "\e63f"; }
-.icon-zhuanzhang:before { content: "\e640"; }
-.icon-priority-o:before { content: "\e641"; }
-.icon-shenhe1:before { content: "\e642"; }
-.icon-accept:before { content: "\e62e"; }
-.icon-comiispaixu:before { content: "\e612"; }
-.icon-tubiao28:before { content: "\e643"; }
-.icon-bangzhu:before { content: "\e607"; }
-.icon-add:before { content: "\e632"; }
-.icon-hulve:before { content: "\e646"; }
-.icon-paixuzhengli:before { content: "\e60c"; }
-.icon-kaiguan:before { content: "\e609"; }
-.icon-forbid:before { content: "\e605"; }
-.icon-tixian:before { content: "\e60a"; }
+
+.icon-infenicon09:before { content: "\e7a8"; }
+
+.icon-biaoqian:before { content: "\e7cb"; }
+
+.icon-queren:before { content: "\e609"; }
+
+.icon-wechaticon21:before { content: "\e625"; }
+
+.icon-shaidan2:before { content: "\e60a"; }
+
+.icon-xiaomeijitianjiashaidantupian:before { content: "\e60f"; }
+
+.icon-shaidan1:before { content: "\e62d"; }
+
+.icon-ap:before { content: "\e601"; }
+
+.icon-icon:before { content: "\e619"; }
+
+.icon-caigoutongji:before { content: "\e6d7"; }
+
+.icon-shangpinxiangqing:before { content: "\e61f"; }
+
+.icon-gonggao:before { content: "\e630"; }
+
+.icon-yijieshu:before { content: "\e67a"; }
+
+.icon-mfshangpinxiangqingdizhi:before { content: "\e666"; }
+
+.icon-bannerguanli:before { content: "\e718"; }
+
+.icon-shangchuanxiangqingyeicon14:before { content: "\e7b0"; }
+
+.icon-mendianshangpintongji:before { content: "\e614"; }
+
+.icon-tongji:before { content: "\e613"; }
+
+.icon-icons01:before { content: "\e698"; }
+
+.icon-biaoshileibaimingdan:before { content: "\e717"; }
+
+.icon-iconxw:before { content: "\e693"; }
+
+.icon-yonghuxinxi:before { content: "\e7df"; }
+
+.icon-shanping:before { content: "\e612"; }
+
+.icon-xxx:before { content: "\e61b"; }
+
+.icon-chongzhizhangdan:before { content: "\e616"; }
+
+.icon-yonghushuju:before { content: "\e63e"; }
+
+.icon-qiang:before { content: "\e60d"; }
+
