--- a/vue2x/oss/src/assets/iconfont/iconfont.css
+++ b/vue2x/oss/src/assets/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1484708244458'); /* IE9*/
-  src: url('iconfont.eot?t=1484708244458#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1484708244458') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1484708244458') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1484708244458#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1485163551470'); /* IE9*/
+  src: url('iconfont.eot?t=1485163551470#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1485163551470') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1485163551470') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1485163551470#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -21,6 +21,8 @@
 
 .icon-queren:before { content: "\e609"; }
 
+.icon-yonghu:before { content: "\e62c"; }
+
 .icon-wechaticon21:before { content: "\e625"; }
 
 .icon-shaidan2:before { content: "\e60a"; }
@@ -31,7 +33,11 @@
 
 .icon-ap:before { content: "\e601"; }
 
+.icon-iconset0196:before { content: "\e65f"; }
+
 .icon-icon:before { content: "\e619"; }
+
+.icon-mima:before { content: "\e61e"; }
 
 .icon-caigoutongji:before { content: "\e6d7"; }
 
@@ -68,4 +74,6 @@
 .icon-yonghushuju:before { content: "\e63e"; }
 
 .icon-qiang:before { content: "\e60d"; }
+
+.icon-search:before { content: "\e600"; }
 
