--- a/vue2x/login/css/index.css
+++ b/vue2x/login/css/index.css
@@ -172,7 +172,7 @@ legend{
 }
 .input-main {
   width: 70%;
-  margin: 0.6rem auto 0;
+  margin: 0.3rem auto 0;
 }
 .input-info {
   width: 100%;
@@ -307,7 +307,8 @@ legend{
   font-size: 16px;
   color: #5a5a5a;
 }
-.pcone-dgpc-text {
+.mob-btn {
+    margin-top: 0.6rem;
 }
 .pc-input-info {
   width: 246px;
