--- a/vue2x/login/css/index.css
+++ b/vue2x/login/css/index.css
@@ -232,7 +232,7 @@ legend{
 .login-bottom {
   width: 100%;
   height: auto;
-  margin-bottom: 0.6rem;
+  margin-top: 0.6rem;
 }
 .company-img {
   width: 70%;
