--- a/vue2x/login/css/index.css
+++ b/vue2x/login/css/index.css
@@ -234,6 +234,11 @@ legend{
   height: auto;
   margin-top: 0.6rem;
 }
+.posBottom {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
 .company-img {
   width: 70%;
   height: auto;
