--- a/vue2x/login/css/index.css
+++ b/vue2x/login/css/index.css
@@ -108,7 +108,7 @@ legend{
 video {
   width:100%;
   height: auto;
-  background-color: #000;
+  background-color: url('../images/mob_img_bg.png');
 }
 #yui3-css-stamp.cssreset{ display:none;}
 /*清除浮动*/
@@ -296,7 +296,11 @@ video {
   position: absolute;
   border-radius: 0.08rem;
   right: -2rem;
-  top:  0;
+  top:  50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
   text-align: center;
   font-size: 0.28rem;
   margin-top: 0;
