--- a/vue2x/wxlogin/css/index.css
+++ b/vue2x/wxlogin/css/index.css
@@ -295,6 +295,8 @@ video {
 }
 .mob-btn {
     margin-top: 0.6rem;
+    background-color: #42bd40;
+    position: relative
 }
 .wx-btn {
   margin-top: 1.6rem;
