add wxpage,delete scroll

--- a/portal0406/src/assets/css/reset.css
+++ b/portal0406/src/assets/css/reset.css
@@ -87,6 +87,7 @@ input,textarea,select,button{
   resize:none;
   -webkit-appearance: none;
 }
+input,input:focus,input:active{user-select: text;}
 
 
 legend{
