--- a/vue2x/wx/chatcat/css/invite.css
+++ b/vue2x/wx/chatcat/css/invite.css
@@ -50,7 +50,7 @@ html {
 }
 .invite-ipt-text {
   width: 92%;
-  margin: 0.4rem auto 0;
+  margin: 0.4rem auto 0.8rem;
   height: 1.2rem;
   padding: 0.44rem 1.9rem 0.44rem 0.4rem;
   border-radius: 0.6rem;
