--- a/wxDoctor/pages/binddrlist/list.wxml
+++ b/wxDoctor/pages/binddrlist/list.wxml
@@ -1,24 +1,31 @@
 <!--index.wxml-->
 <view class="container">
-  <scroll-view class="binddoctor-list" scroll-y style="height: 100%;"
+  <scroll-view scroll-y style="height: 100%;"
     bindscrolltoupper="upper" 
     bindscrolltolower="lower" 
     bindscroll="scroll" 
     scroll-top="{{scrollTop}}">
-    <image class="binddoctor-img" src="../../images/login/ico_report.png"></image>
-    <view class="binddoctor-info">
-      <view class="binddoctor-name">
-        <text class="inner-name">张三</text>
-        <text class="inner-hospital">东坑医院</text>
-        <text class="inner-cate">内科</text>
-      </view>
-      <!--view>
-        <text class="chat-time">12:30</text>
-        <text class="chat-text g-ellipsis">医生您好,请问我的医生您好,请问我的医生您好,请问我的医生您好,请问我的医生您好,请问我的医生您好,请问我的医生您好,请问我的</text>
-      </view-->
-      <view>
-        <text class="click-inquiry">点击问诊开始咨询</text>
+    <view class="binddoctor-list" wx:for="{{info}}" 
+      wx:key="mydr" 
+      wx:for-index="idx"
+      data-index="{{idx}}"
+      bindtap="goPt">
+      <image class="binddoctor-img" src="{{item.doctor.headurl}}"></image>
+      <view class="binddoctor-info">
+        <view class="binddoctor-name">
+          <text class="inner-name">{{item.doctor.name}}</text>
+          <text class="inner-hospital">{{item.doctor.hospital}}</text>
+          <text class="inner-cate">{{item.doctor.department}}</text>
+        </view>
+        <view wx:if="{{item.flag}}">
+          <text class="chat-time">{{item.chat.ctime}}</text>
+          <text class="chat-text g-ellipsis">{{item.chat.type===1 ? item.chat.content :'[图片]'}}</text>
+        </view>
+        <view wx:else>
+          <text class="click-inquiry">点击问诊开始咨询</text>
+        </view>
       </view>
     </view>
-  </scroll-view> 
+  </scroll-view>
+  <text class="tip-show" wx:if="{{tipShow}}">{{tipMsg}}</text> 
 </view>
