--- a/wxDoctor/pages/drconfirm/drconfirm.wxml
+++ b/wxDoctor/pages/drconfirm/drconfirm.wxml
@@ -7,12 +7,15 @@
     <view class="confrim-list"><text>所属科室</text>{{info.department}}</view>
     <view class="confrim-list confrim-ipt-list">
       <text class>设置门诊费</text>
-      <input class="mon-ipt" type="text" value="{{iptMoney}}" bindinput="bindFeeInput" placeholder="单位元">{{info.fee}}</input>
+      <input class="mon-ipt" type="text" 
+        value="{{iptMoney}}" 
+        focus="{{iptFocus}}" 
+        bindinput="bindFeeInput" placeholder="单位元">{{info.fee}}</input>
       <button class="mon-btn" bindtap="saveFee">保存</button>
     </view>
     <text class="drconfirm-tip g-tac">如个人信息有误，请联系\n0755-86700641</text>
     <view class="img-box">
-        <canvas bindtap="previewImg" hidden="{{canvasHidden}}" style="width: 400rpx;height: 400rpx;margin: 36rpx auto 34rpx;border:1rpx solid #b4b4b4" canvas-id="mycanvas"/>
+        <canvas bindtap="previewImg" longtap="previewImg" hidden="{{canvasHidden}}" style="width: 400rpx;height: 400rpx;margin: 36rpx auto 34rpx;border:1rpx solid #b4b4b4" canvas-id="mycanvas"/>
         <!--<image bindtap="previewImg" mode="scaleToFill" src="{{imagePath}}"></image>-->
     </view>
     <text class="dr-text g-tac"><text class="coloraf">长按保存</text>以上二维码并引导患者扫描\n即可绑定患者，接收回诊咨询</text>
